--- a/frontend/src/app/my-courses/course/tickets/assignments-concepts-page/assignments-concepts-page.component.css
+++ b/frontend/src/app/my-courses/course/tickets/assignments-concepts-page/assignments-concepts-page.component.css
@@ -1,4 +1,4 @@
-.left-column {
+/* .left-column {
     flex: 1;
     background-color: #f0f0f0;
     padding: 20px;
@@ -8,4 +8,4 @@
     flex: 1;
     background-color: #f0f0f0;
     padding: 20px;
-}
+} */
