--- a/frontend/src/app/my-courses/course/tickets/assignments-concepts-page/assignments-concepts-page.component.html
+++ b/frontend/src/app/my-courses/course/tickets/assignments-concepts-page/assignments-concepts-page.component.html
@@ -1,15 +1,15 @@
 <!-- here is the navigation like we had in the figma --> 
  
-<mat-card-title>Tickets</mat-card-title> <!-- reused header-->
+<!-- <mat-card-title>Tickets</mat-card-title> reused header -->
 <!-- add create button-->
-<left-column><h2>Assignments</h1></left-column> <!-- headers for the two cols we will sort info into-->
-<right-column><h2>Concepts</h2></right-column> 
-<course-card> <!-- fake info for now bc need to ref backend -->
-    <p>EX01</p> <!-- ass or concept-->
-    <label> 7 </label> <!-- number of issues under the ass or concept-->
-    <button> View </button> <!-- make view button link to group.component page-->
+<!-- <left-column><h2>Assignments</h1></left-column> headers for the two cols we will sort info into -->
+<!-- <right-column><h2>Concepts</h2></right-column>  -->
+<!-- <course-card> fake info for now bc need to ref backend -->
+    <!-- <p>EX01</p> ass or concept -->
+    <!-- <label> 7 </label> number of issues under the ass or concept -->
+    <!-- <button> View </button> make view button link to group.component page -->
 
-</course-card>
+<!-- </course-card> -->
 
 <!-- <course-card.widget>     
   
