commented out css and html

--- a/frontend/src/app/my-courses/course/tickets/group/group.component.html
+++ b/frontend/src/app/my-courses/course/tickets/group/group.component.html
@@ -1,8 +1,8 @@
-<header></header> <!-- need to fill in ass or concept name here-->
-<course-card>
+<!-- <header></header> need to fill in ass or concept name here -->
+<!-- <course-card> -->
     <!-- within here fill in issue names, num tickets under it--> 
-    <button>View</button> <!-- link to issue.component page -->
-</course-card> <!-- talked with simon and dan and for now will reuse look from last one so same widget-->
+    <!-- <button>View</button> link to issue.component page -->
+<!-- </course-card> talked with simon and dan and for now will reuse look from last one so same widget -->
 
 
 <!-- example code for filling in a widget below
