--- a/frontend/src/app/my-courses/course/tickets/issue/issue.component.html
+++ b/frontend/src/app/my-courses/course/tickets/issue/issue.component.html
@@ -11,3 +11,6 @@ issue name, tickets under it, view button to link to the tickets under it  -->
     </a> -->
 }
     <!-- need to make button link to group page -->
+<p>
+  hello world
+</p>
