--- a/frontend/src/app/my-courses/course/tickets/assignments-concepts-page/assignments-concepts-page.component.html
+++ b/frontend/src/app/my-courses/course/tickets/assignments-concepts-page/assignments-concepts-page.component.html
@@ -3,22 +3,19 @@
     <div class="left-column">
           <h3>{{ item.name }}</h3>
           <p>{{ item.num_tickets }}</p>
-          <button>View</button>
-          <!-- <a [attr.href]="http://localhost:1560/course/3/office-hours" target="_blank">
+          <button (click)="navigateToIssues()">  clicking this needs to the issues page
             View
-          </a> -->
+          </button>
         </div>
   }
-  <!-- use issue html bc they were put in backwards-->
    
   @for (item of assnConcepts().concepts; track item){
     <div class="right-column">
-      <h3>{{ item.name }}</h3>
-      <p>{{ item.num_tickets }}</p>
-      <button>View</button>
-      <!-- <button (click)="importFromCanvas()">  clicking this needs to the issues page
+        <h3>{{ item.name }}</h3>
+        <p>{{ item.num_tickets }}</p>
+        <button (click)="navigateToIssues()">  clicking this needs to the issues page
           View
-        </button> -->
+        </button>
       </div>
 }
 </div>
