--- a/frontend/src/app/my-courses/course/tickets/group/group.component.html
+++ b/frontend/src/app/my-courses/course/tickets/group/group.component.html
@@ -1,5 +1,5 @@
 <!-- need to display issue then full ticket-->
- <h1>Issues</h1>
+ <h1>Tickets</h1>
 @for (item of tickets(); track item){
-    <p>item</p>>
+    <p>item</p>
 }
