Feature angular ts ready for css (#19) :P
* html is done just need to fix button and desperately need to work on css

* button working

* spelling error

* almost there

* a

* work

* ready for PR

---------

Co-authored-by: Cassidy Lowe <calowe@unc.edu>

--- a/frontend/src/app/my-courses/course/tickets/issue/issue.component.html
+++ b/frontend/src/app/my-courses/course/tickets/issue/issue.component.html
@@ -1,1 +1,11 @@
-
+<div class="course-card-container">
+  @for (item of issues(); track item){
+    <div class="left-column">
+          <h3>{{ item.name }}</h3>
+          <p>{{ item.num_tickets }}</p>
+          <button (click)="navigateToTickets()">  clicking this needs to the issues page
+            View
+          </button>
+        </div>
+  }
+</div>
