--- a/frontend/src/app/my-courses/course/tickets/group/group.component.css
+++ b/frontend/src/app/my-courses/course/tickets/group/group.component.css
@@ -4,6 +4,7 @@
     gap: 20px; 
     padding-left: 10px; 
     padding-right: 10px;
+    margin: 2rem .3rem 0 .3rem;
 } 
   
   .ticket {
@@ -12,6 +13,7 @@
     margin-bottom: 10px;
     background-color: #f9f9f9;
     border-radius: 8px;
+    color: black;
   }
   
   .toggle-button {
