--- a/frontend/src/app/my-courses/course/tickets/group/group.component.html
+++ b/frontend/src/app/my-courses/course/tickets/group/group.component.html
@@ -1,5 +1,35 @@
-<!-- need to display issue then full ticket-->
- <h1>Tickets</h1>
+<!-- need to remove nav bar somehow-->
+ <div class="container">
 @for (item of tickets(); track item){
-    <p>item</p>
+    <div class="ticket">
+      @if(item.type == 0){
+        <p>Ticket - Assignment Help </p>}
+        @if(item.type == 1){
+          <p>Ticket - Concept Help </p>}
+    <p>Created At: {{item.created_at}}</p>
+    <p>Description: {{item.description}}</p>
+    @if(isDetailsVisible(item.id)){
+      <div class="ticket-details">
+      <p>Type: {{ item.type }}</p>
+      <p>ID: {{ item.office_hours_id }}</p>
+      <p>State: {{ item.state }}</p>
+      <p>Created At: {{ item.created_at }}</p>
+      <p>Called At: {{ item.called_at }}</p>
+      <p>Closed At: {{ item.closed_at }}</p>
+      <p>Have Concers: {{ item.have_concerns }}</p>
+      <p>Caller Notes: {{ item.caller_notes }}</p>
+      <p>Caller ID: {{ item.caller_id }}</p>
+    </div>
+    }
+    @if(isDetailsVisible(item.id)){
+    <button (click)="OpenTicket(item.id)" class="toggle-button">
+      ^
+    </button>}
+    @if(!isDetailsVisible(item.id)){
+      <button (click)="OpenTicket(item.id)" class="toggle-button">
+        V
+      </button>}
+</div>
+
 }
+</div>
