--- a/frontend/src/app/my-courses/course/tickets/issue/issue.component.html
+++ b/frontend/src/app/my-courses/course/tickets/issue/issue.component.html
@@ -1,11 +1,9 @@
-<div class="course-card-container">
+<div class="container, grid">
   @for (item of issues(); track item){
-    <div class="left-column">
-          <h3>{{ item.name }}</h3>
-          <p>{{ item.num_tickets }}</p>
-          <button (click)="navigateToTickets()">  clicking this needs to the issues page
-            View
-          </button>
-        </div>
+    <div class="grid-item">
+      <span class="ticket-count">{{ item.num_tickets }}</span>
+      <h3>{{ item.name }}</h3>
+      <button class="view-button" (click)="navigateToTickets()">View</button>
+    </div>    
   }
 </div>
