--- a/frontend/src/app/my-courses/course/tickets/widgets/assignment-card/assignment-card.widget.html
+++ b/frontend/src/app/my-courses/course/tickets/widgets/assignment-card/assignment-card.widget.html
@@ -7,6 +7,12 @@ appearance="outlined">
   <mat-card-title class="title-medium">
     {{ name }}
   </mat-card-title>
+  <mat-card-title class="title-medium">
+     {{ numTickets }}
+  </mat-card-title>
+  <mat-card-title class="title-medium">
+    {{ assignmentID }}
+  </mat-card-title>
   <mat-card-subtitle class="title-small assignment-card-title"></mat-card-subtitle>
 </mat-card-header>
 <mat-card-content>
