--- a/frontend/src/app/my-courses/course/tickets/group/group.component.css
+++ b/frontend/src/app/my-courses/course/tickets/group/group.component.css
@@ -32,3 +32,25 @@
     margin-top: 10px;
   }
   
+  .left-column {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    height: 85vh;
+  }
+
+  .right-column {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    height: 85vh;
+    padding-right: 16px;
+  }
+
+  .queue-pane {
+    flex: 1 1 auto;
+    min-height: 0;
+    max-height: 100%;
+    max-width: 100%;
+    border-color: transparent !important;
+  }
