numbers are finished but all view buttons of groups lead to same ticket - need to fix

--- a/frontend/src/app/my-courses/course/tickets/assignments-concepts-page/assignments-concepts-page.component.html
+++ b/frontend/src/app/my-courses/course/tickets/assignments-concepts-page/assignments-concepts-page.component.html
@@ -4,7 +4,7 @@
     <div class="grid">
   @for (item of assnConcepts().assignments; track item){
     <div class="grid-item">
-      <span class="ticket-count">{{ item.num_tickets }}</span>
+      <span class="ticket-count">{{ length() }}</span>
       <h3>{{ item.name }}</h3>
       <button class="view-button" (click)="navigateToIssues()">View</button>
     </div>    
@@ -17,7 +17,7 @@
   <div class="grid">
   @for (item of assnConcepts().concepts; track item){
     <div class="grid-item">
-      <span class="ticket-count">{{ item.num_tickets }}</span>
+      <span class="ticket-count">{{ length() }}</span>
       <h3>{{ item.name }}</h3>
       <button class="view-button" (click)="navigateToIssues()">View</button>
     </div>    
