removed assn id from widget

--- a/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.html
+++ b/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.html
@@ -14,9 +14,9 @@ style="width: 250px; height: 120px; display: flex; flex-direction: column; justi
     </mat-card-title> -->
     <mat-card-title _ngcontent-ng-c3579980155="" class="mat-mdc-card-title title-large"> {{name}} </mat-card-title>
 
-    <mat-card-subtitle class="title-medium course-title" >
+    <!-- <mat-card-subtitle class="title-medium course-title" >
       {{ assignmentID }}
-    </mat-card-subtitle>
+    </mat-card-subtitle> -->
 
 
   </mat-card-header>
