--- a/frontend/src/app/my-courses/course/tickets/widget/issue-card/issue-card.widget.html
+++ b/frontend/src/app/my-courses/course/tickets/widget/issue-card/issue-card.widget.html
@@ -12,11 +12,11 @@ style="width: 250px; height: 120px; display: flex; flex-direction: column; justi
     <!-- <mat-card-title class="title-large">
       {{ name }}
     </mat-card-title> -->
-    <mat-card-title _ngcontent-ng-c3579980155="" class="mat-mdc-card-title title-large"> {{name}} </mat-card-title>
+    <mat-card-title _ngcontent-ng-c3579980155="" class="mat-mdc-card-title title-medium"> {{name}} </mat-card-title>
 
-    <mat-card-subtitle class="title-medium course-title" >
+    <!-- <mat-card-subtitle class="title-medium course-title" >
       {{ issueID }}
-    </mat-card-subtitle>
+    </mat-card-subtitle> -->
 
 
   </mat-card-header>
