--- a/frontend/src/app/my-courses/course/tickets/group/group.component.html
+++ b/frontend/src/app/my-courses/course/tickets/group/group.component.html
@@ -1,9 +1,8 @@
-<!-- need to remove nav bar somehow-->
 <div class="container">
-<div class="left-column">
-<div class="queue-pane">
+<!-- <div class="left-column"> -->
+<!-- <div class="queue-pane"> -->
 @for (item of tickets(); track item){
-    @if(isDetailsVisible(item.id)){ 
+  <div class="ticket">
       <app-ticket-widget 
         [ticket]="item"
         [type]="typeMap[item.type]"
@@ -16,16 +15,8 @@
         [caller_notes]="item.caller_notes"
         [caller_id]="item.caller_id">
       </app-ticket-widget>
-    }
-    @if(isDetailsVisible(item.id)){
-    <button (click)="OpenTicket(item.id)" class="toggle-button">
-      ^
-    </button>}
-    @if(!isDetailsVisible(item.id)){
-      <button (click)="OpenTicket(item.id)" class="toggle-button">
-        V
-      </button>}
+    </div>
 }
 </div>
-</div>
-</div>
+<!-- </div> -->
+<!-- </div> -->
