--- a/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.scss
+++ b/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.scss
@@ -15,6 +15,8 @@
     flex-direction: column;
     position: relative;
     justify-content: space-between;
+    // padding-top: 2rem;
+    // padding-right: 2rem;
   }
   
   .assignment-card-title {
@@ -37,6 +39,7 @@
     justify-content: center;
     font-size: 12px;
     font-weight: bold;
+    // z-index: 1;
   }
   
   .assignment-card-view-button {
@@ -71,6 +74,7 @@
     justify-content: center;
     font-weight: bold;
     font-size: 0.75rem;
+    // z-index: 1;
   }
 
   .card-footer {
