--- a/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.scss
+++ b/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.scss
@@ -39,8 +39,8 @@
     justify-content: center;
     font-size: 12px;
     font-weight: bold;
-    // z-index: 1;
   }
+  
   
   .assignment-card-view-button {
     position: absolute;
@@ -71,6 +71,7 @@
     height: 1.6rem;
     display: flex;
     align-items: center;
+    padding: 0.25rem 0.5rem;
     justify-content: center;
     font-weight: bold;
     font-size: 0.75rem;
