--- a/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.html
+++ b/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.html
@@ -1,8 +1,7 @@
-<mat-card
+<div><mat-card
 class="assignment--card"
 appearance="outlined"
 style="width: 250px; height: 120px; display: flex; flex-direction: column; justify-content: space-between;">
-  
 
 <div class="ticket-badge">
   {{ numTickets }}
@@ -29,3 +28,4 @@ style="width: 250px; height: 120px; display: flex; flex-direction: column; justi
   
   <!-- Optional actions -->
   <!-- <mat-card-actions class="course-card-actions"> -->
+    </mat-card></div>
