--- a/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.scss
+++ b/frontend/src/app/my-courses/course/tickets/widget/assignment-card/assignment-card.widget.scss
@@ -15,8 +15,13 @@
     flex-direction: column;
     position: relative;
     justify-content: space-between;
+    padding-right: 2rem;
     // padding-top: 2rem;
     // padding-right: 2rem;
+  }
+  
+  mat-card-title {
+    padding-right: 2rem;
   }
   
   .assignment-card-title {
