--- a/frontend/src/app/my-courses/course/tickets/widget/issue-card/issue-card.widget.scss
+++ b/frontend/src/app/my-courses/course/tickets/widget/issue-card/issue-card.widget.scss
@@ -1,7 +1,6 @@
 ::ng-deep .assignment-card {
     width: 250px;
     height: 120px;
-    position: relative;
     padding: 1rem;
     border-radius: 0.75rem; /* More rounded like your screenshot */
     background-color: white; /* Match the white card */
@@ -15,6 +14,7 @@
     flex-direction: column;
     position: relative;
     justify-content: space-between;
+    padding-right: 2rem; /* space for the badge */
   }
   
   .assignment-card-title {
