--- a/frontend/src/app/my-courses/course/tickets/issue/issue.component.html
+++ b/frontend/src/app/my-courses/course/tickets/issue/issue.component.html
@@ -1,4 +1,4 @@
-<div class="container, grid">
+<div class="container grid">
   @for (item of issues(); track item){ 
     <app-issue-card
       [name]="item.name"
