--- a/frontend/src/app/my-courses/course/tickets/widget/issue-card/issue-card.widget.html
+++ b/frontend/src/app/my-courses/course/tickets/widget/issue-card/issue-card.widget.html
@@ -1,7 +1,6 @@
 <mat-card
 class="issue--card"
-appearance="outlined"
-style="width: 250px; height: 120px; display: flex; flex-direction: column; justify-content: space-between;">
+appearance="outlined">
   
 
 <div class="ticket-badge">
@@ -9,16 +8,7 @@ style="width: 250px; height: 120px; display: flex; flex-direction: column; justi
 </div>
 
   <mat-card-header>
-    <!-- <mat-card-title class="title-large">
-      {{ name }}
-    </mat-card-title> -->
     <mat-card-title _ngcontent-ng-c3579980155="" class="mat-mdc-card-title title-medium"> {{name}} </mat-card-title>
-
-    <!-- <mat-card-subtitle class="title-medium course-title" >
-      {{ issueID }}
-    </mat-card-subtitle> -->
-
-
   </mat-card-header>
 
   <mat-card-footer class="card-footer">
@@ -26,6 +16,4 @@ style="width: 250px; height: 120px; display: flex; flex-direction: column; justi
       View
     </button>
   </mat-card-footer>
-  
-  <!-- Optional actions -->
-  <!-- <mat-card-actions class="course-card-actions"> -->
+</mat-card>
