--- a/frontend/src/app/my-courses/course/tickets/issue/issue.component.css
+++ b/frontend/src/app/my-courses/course/tickets/issue/issue.component.css
@@ -1,17 +1,13 @@
 /* Base container: lays out assignments and concepts side by side */
 .container {
-  display: flex;
-  justify-content: space-between;
-  gap: 2rem;
   padding: 1rem;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* 2 columns */
-  gap: 1rem;
-  margin: 2rem auto 0 auto;
-  transform: translateX(40px);
+  grid-template-columns: repeat(2, 50%);
+  column-gap: 0.1rem;
+  margin: 0 auto;
   color: black;
 }
 
@@ -33,7 +29,8 @@
 }
 
 .grid-item {
-  width: 500px;
+  justify-self: center;    
+  width: 100%;        
   height: 75px;
   position: relative;
   padding: 1rem;
