--- a/frontend/src/app/my-courses/course/tickets/issue/issue.component.css
+++ b/frontend/src/app/my-courses/course/tickets/issue/issue.component.css
@@ -5,7 +5,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 50%);
+  grid-template-columns: repeat(2, 1fr);
   column-gap: 0.1rem;
   margin: 0 auto;
   color: black;
